--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,79 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #e9f035;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url('/public/fundo-teste.jpg');
+    background-size: cover;
+    background-position: center;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.box-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30rem;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(2px);
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0.5rem 0;
 }
-button:hover {
-  border-color: #646cff;
+.box-form h1{
+    padding-bottom: 1rem;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.form input{
+    border-radius: 5px;
+    margin-top: 0.4rem;
+    padding: 0.3rem;
+    border: white;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.forgot{
+    text-align: right;
+    font-size: 0.9rem;
+    padding-top: 0.2rem;
+}
+.forgot a{
+    color: #e9f035;
+    text-decoration-line: none;
+}
+.forgot a:hover{
+    text-decoration-line: underline;
+}
+.button{
+    text-decoration-line: none;
+    color: white;
+    background-color: #e9f035;
+    width: 100%;
+    text-align: center;
+    padding: 0.8rem;
+    border-radius: 15px;
+    margin-top: 1rem;
+}
+.button:hover{
+    background-color: rgb(223, 230, 53);
+}
+.sign_up{
+    margin-top: 0.5rem;
+    font-size: 0.8rem;
+}
+.sign_up a{
+    color: #e9f035;
 }
